tests/invalidTest/other/bool_arith.q
# EXPECT boolean (uint1) cannot be as the operand of arithmatic operand
def void errorDef(){
    uint8 a = true + false
}